# handler/updateOpening.go
@@ -7,6 +7,20 @@ import (
 	"github.com/gumeeee/go-jobs-api/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Sumary Update Opening
+// @Description Update a existing job opening
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Param id query string true "Opening identification"
+// @Param opening body UpdateOpeningRequest true "Opening data to update"
+// @Success 200 {object} UpdateOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /opening [put]
 func UpdateOpeningHandler(ctx *gin.Context) {
 	request := UpdateOpeningRequest{}
 
